--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -19,9 +19,10 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "./",
+    "baseUrl": "./"
   },
   "include": [
-    "src", ".eslintrc.js"
+    "src",
+    ".eslintrc.js"
   ]
 }
