--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:fe": "cd ./cliente && npm run build",
-    "start:be": "cd ./server && npm run prod"
+    "start:be": "cd ./server && npm run prod",
+    "build": "npm run start:fe && npm run start:be"
   },
   "repository": {
     "type": "git",
