--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.5",
     "ts-node-dev": "^1.1.6",
-    "typescript": "^4.3.5"
-  },
-  "devDependencies": {
+    "typescript": "^4.3.5",
     "@types/validator": "^13.6.3",
     "tsconfig-paths": "^3.10.1"
   },
