--- a/package.json
+++ b/package.json
@@ -1,27 +1,22 @@
 {
-  "name": "elcampinserver",
+  "name": "elcampin",
   "version": "1.0.0",
-  "main": "build/index.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --respawn --transpile-only ./app/index.ts",
-    "build": "tsc",
-    "start": "node ./build/app/index.js",
-    "heroku-prebuild": "cd app/client && npm install && npm run build",
-    "heroku-postbuild": "npm install && npm run build"
+    "start": "node server/build/app/index.js",
+    "heroku-prebuild": "cd client && npm install && npm run build",
+    "heroku-postbuild": "cd server && npm install && npm run build"
   },
-  "author": "Oscar Torres",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LeonidasGangsta/elcampin.git"
+  },
+  "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@types/express": "^4.17.12",
-    "express": "^4.17.1",
-    "mysql2": "^2.2.5",
-    "sequelize": "^6.6.5",
-    "ts-node-dev": "^1.1.6",
-    "typescript": "^4.3.5",
-    "@types/validator": "^13.6.3",
-    "tsconfig-paths": "^3.10.1"
+  "bugs": {
+    "url": "https://github.com/LeonidasGangsta/elcampin/issues"
   },
-  "keywords": [],
-  "description": ""
+  "homepage": "https://github.com/LeonidasGangsta/elcampin#readme"
 }
