--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/build/app/index.js",
     "start:fe": "cd client && npm start",
+    "start:be": "cd server && npm run dev",
     "heroku-prebuild": "cd client && npm install && npm run build",
     "heroku-postbuild": "cd server && npm install && npm run build"
   },
