--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.5",
-    "axios": "^0.26.0"
-  },
-  "devDependencies": {
+    "axios": "^0.26.0",
     "@types/node": "^17.0.19",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
