--- a/server/package.json
+++ b/server/package.json
@@ -12,14 +12,18 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.13",
+    "@types/validator": "^13.7.1",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "mysql2": "^2.3.3",
     "sequelize": "^6.16.2",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.5",
-    "@types/validator": "^13.7.1",
-    "tsconfig-paths": "^3.12.0"
+    "tsconfig-paths": "^3.12.0",
+    "typescript": "^4.5.5"
   },
   "keywords": [],
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@types/cors": "^2.8.12"
+  }
 }
